NEW 257957
SharedMemory does not support creating a VM copy
https://bugs.webkit.org/show_bug.cgi?id=257957
Summary SharedMemory does not support creating a VM copy
Kimmo Kinnunen
Reported 2023-06-12 08:15:59 PDT
SharedMemory does not support creating a VM copy Would be useful to copy memory with a VM copy
Attachments
Radar WebKit Bug Importer
Comment 1 2023-06-12 08:18:37 PDT
Kimmo Kinnunen
Comment 2 2023-06-12 08:30:58 PDT
Note You need to log in before you can comment on or make changes to this bug.