SharedMemory does not support creating a VM copy https://bugs.webkit.org/show_bug.cgi?id=257957 rdar://problem/110644611

Reviewed by NOBODY (OOPS!).

Add SharedMemoryHandle::createCopy() which creates a SharedMemoryHandle
out of an existing VM region.

Also add SharedMemoryHandle::create() which shares the VM region itself.

* Source/WebKit/Platform/SharedMemory.cpp:
(WebKit::SharedMemoryHandle::createCopy):
* Source/WebKit/Platform/SharedMemory.h:
* Source/WebKit/Platform/cocoa/SharedMemoryCocoa.cpp:
(WebKit::toPointer):
(WebKit::toVMAddress):
(WebKit::machProtection):
(WebKit::makeMemoryEntry):
(WebKit::SharedMemoryHandle::create):
(WebKit::SharedMemoryHandle::createCopy):
(WebKit::SharedMemory::wrapMap):
(WebKit::SharedMemory::~SharedMemory):
(WebKit::SharedMemory::createHandle):
(WebKit::SharedMemory::createSendRight const): Deleted.
* Tools/TestWebKitAPI/TestWebKitAPI.xcodeproj/project.pbxproj:
* Tools/TestWebKitAPI/Tests/IPC/SharedMemoryTests.cpp: Added.
(WebKit::PrintTo):
(TestWebKitAPI::PrintTo):
(TestWebKitAPI::fillTestPattern):
(TestWebKitAPI::expectTestPattern):
(TestWebKitAPI::SharedMemoryFromMemoryTest::memorySize const):
(TestWebKitAPI::SharedMemoryFromMemoryTest::offset const):
(TestWebKitAPI::SharedMemoryFromMemoryTest::memorySource const):
(TestWebKitAPI::SharedMemoryFromMemoryTest::protection const):
(TestWebKitAPI::SharedMemoryFromMemoryTest::allocate):
(TestWebKitAPI::TEST_P):